# rpn-calculator

./: README.md  pyproject.toml
src/: constants.py  main — копия.py  main.py
tests/: def_check_brackets.py  def_check_operators.py  def_parse.py  def_solve.py  test.py
