[project]
name = "rpn-calculator"
version = "1.4"
description = "Калькулятор состояит из 4 служебных функций:

1. parse()
Принимает на ввод строку, после чего преобразует ее в стек.

2. check_brackets()
Путем нахождения последнего символа ')' и предшествующего ему
символа '(', выбирает скобки с высшим приоритетом.
Проверяет, корректно ли выражение в скобках, применяя на него функцию solve().
если выражение корректно, Удаляет скобки из стек

3. check_operators()
Проверяет правильность ввода операторов и операндов
в соответствии с формулой, описанной в README: len = 2*bin + un + 1

4. solve()
Заключительная операция. Используется также в check_brackets(), чтобы проверить
правильность выражения в скобках. При применении на стек, преобразует его в список,
состоящий из одного элемента. Этот элемент является значением исходного выражения


Функция calc() сочетает в себе все служебные функции, и, опираясь на них,
выдает результат напрямую.
"

requires-python = ">=3.13.7"
dependencies = [
    "pytest>=8.4.2",
]